# FARM-Stack

./: LICENSE  launch_app.sh  pyproject.toml
backend/: database.py  main.py  model.py
