[tool.poetry]
name = "farm-stack"
version = "0.1.0"
description = ""
authors = ["nicholas-dinicola <nicholasdinicola@outlook.com>"]
readme = "README.md"
packages = [{include = "farm_stack"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
motor = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
